--- a/public/liveGraph/index.html
+++ b/public/liveGraph/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live Graph</title>
     <link href="style.css" rel="stylesheet"/>
+    <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser-arcade-physics.min.js"></script>
+    
     <style>
         body {
             display: flex;
