--- a/public/liveGraph/index.html
+++ b/public/liveGraph/index.html
@@ -5,13 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live Graph</title>
     
-    <link href="style.css" rel="stylesheet"/>
-    <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser-arcade-physics.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f0f0f0;
+            margin: 0;
+        }
+        canvas {
+            width: 800px;  /* Set canvas width to 800 pixels */
+            height: 600px; /* Set canvas height to 600 pixels */
+        }
+    </style>
 </head>
 <body>
     <canvas id="liveGraph"></canvas>
-    
+
+    <!-- Include Chart.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Include the JavaScript file -->
     <script src="liveGraph.js"></script>
 </body>
