--- a/public/liveGraph/index.html
+++ b/public/liveGraph/index.html
@@ -21,11 +21,11 @@
     </style>
 </head>
 <body>
-    <canvas id="liveGraph"></canvas>
+    <canvas id="TemmpliveGraph"></canvas>
 
     <!-- Include Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Include the JavaScript file -->
-    <script src="liveGraph.js"></script>
+    <script src="TempliveGraph.js"></script>
 </body>
 </html>
