--- a/public/liveGraph/index.html
+++ b/public/liveGraph/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Live Graph</title>
-    
     <style>
         body {
             display: flex;
@@ -21,11 +20,11 @@
     </style>
 </head>
 <body>
-    <canvas id="TemmpliveGraph"></canvas>
+    <canvas id="liveGraph"></canvas>
 
     <!-- Include Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Include the JavaScript file -->
-    <script src="TempliveGraph.js"></script>
+    <script src="liveGraph.js"></script>
 </body>
 </html>
