--- a/public/liveGraph/index.html
+++ b/public/liveGraph/index.html
@@ -25,6 +25,6 @@
     <!-- Include Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Include the JavaScript file -->
-    <script src="liveGraph.js"></script>
+    <script src="TempliveGraph.js"></script>
 </body>
 </html>
