--- a/public/liveGraph/index.html
+++ b/public/liveGraph/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live Graph</title>
+    <title>Live Graphs</title>
     <style>
         body {
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
@@ -16,15 +17,18 @@
         canvas {
             width: 800px;  /* Set canvas width to 800 pixels */
             height: 600px; /* Set canvas height to 600 pixels */
+            margin: 10px;  /* Add some margin between graphs */
         }
     </style>
 </head>
 <body>
-    <canvas id="liveGraph"></canvas>
+    <canvas id="liveGraphTemp"></canvas>
+    <canvas id="liveGraphPressure"></canvas>
 
     <!-- Include Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <!-- Include the JavaScript file -->
+    <!-- Include the JavaScript files -->
     <script src="TempliveGraph.js"></script>
+    <script src="PressureLiveGraph.js"></script>
 </body>
 </html>
