--- a/public/liveGraph/index.html
+++ b/public/liveGraph/index.html
@@ -14,21 +14,30 @@
             background-color: #f0f0f0;
             margin: 0;
         }
+        .graph-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 10px; /* Add space between the graphs */
+        }
         canvas {
-            width: 400px;  /* Set canvas width to 400 pixels (50% of 800 pixels) */
-            height: 300px; /* Set canvas height to 300 pixels (50% of 600 pixels) */
-            margin: 10px;  /* Add some margin between graphs */
+            width: 400px;  /* Set canvas width */
+            height: 350px; /* Set canvas height */
         }
     </style>
 </head>
 <body>
-    <canvas id="liveGraphTemp"></canvas>
-    <canvas id="liveGraphPressure"></canvas>
+    <div class="graph-container">
+        <canvas id="liveGraphTemp"></canvas>
+        <canvas id="liveGraphPressure"></canvas>
+        <canvas id="liveGraphAltitude"></canvas>
+    </div>
 
     <!-- Include Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Include the JavaScript files -->
     <script src="TempliveGraph.js"></script>
     <script src="PressureLiveGraph.js"></script>
+    <script src="AltitudeLiveGraph.js"></script>
 </body>
 </html>
