--- a/public/liveGraph/index.html
+++ b/public/liveGraph/index.html
@@ -31,6 +31,8 @@
         <canvas id="liveGraphTemp"></canvas>
         <canvas id="liveGraphPressure"></canvas>
         <canvas id="liveGraphAltitude"></canvas>
+        <canvas id="liveGraphVelocity"></canvas>
+
     </div>
 
     <!-- Include Chart.js -->
@@ -39,5 +41,7 @@
     <script src="TempliveGraph.js"></script>
     <script src="PressureLiveGraph.js"></script>
     <script src="AltitudeLiveGraph.js"></script>
+    <script src="VelocityLiveGraph.js"></script>
+
 </body>
 </html>
