--- a/public/liveGraph/index.html
+++ b/public/liveGraph/index.html
@@ -6,33 +6,82 @@
     <title>Live Graphs</title>
     <style>
         body {
-            position: relative; /* Allow absolute positioning of children */
+            position: relative;
             height: 100vh;
             background-color: #f0f0f0;
             margin: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        #header {
+            width: 100%;
+            height: 150px;
+            background-image: url('path/to/header-image.png'); /* Update with correct image path */
+            background-size: cover;
+            background-position: center;
+        }
+        #status {
+            margin: 20px 0;
+            font-size: 18px;
+        }
+        .graphs {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            flex-wrap: wrap;
+        }
+        .graph-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            border: 1px solid black; 
+            padding: 10px;
+            background: white;
+            width: 300px;
+            height: 300px;
+        }
+        .graph-title {
+            margin-bottom: 10px;
         }
         #descentGraph {
-            position: absolute; /* Enable positioning */
-            top: 50px; /* Initial top position */
-            left: 50px; /* Initial left position */
-            width: 700px; /* Initial width */
-            height: 500px; /* Initial height */
-            border: 1px solid black; /* Optional: Add border for better visualization */
-            resize: both; /* Allow resizing */
-            overflow: auto; /* Enable scrolling if content overflows */
-            cursor: move; /* Change cursor to move icon */
-        }
-        .canvas {
-            position: absolute; /* Enable positioning */
+            width: 300px; 
+            height: 300px;
         }
     </style>
 </head>
 <body>
-    <div id="descentGraph"></div>
-    <canvas id="liveGraphTemp" class="canvas" style="top: 50px; left: 900px; width: 200px; height: 150px;"></canvas>
-    <canvas id="liveGraphPressure" class="canvas" style="top: 50px; left: 1800px; width: 200px; height: 150px;"></canvas>
-    <canvas id="liveGraphAltitude" class="canvas" style="top: 720px; left: 10px; width: 200px; height: 150px;"></canvas>
-    <canvas id="liveGraphVelocity" class="canvas" style="top: 720px; left: 900px; width: 200px; height: 150px;"></canvas>
+    <div id="header"></div>
+    <div id="status">
+        <p>Status: On-flight</p>
+        <p>Latitude: 38.2323°</p>
+        <p>Longitude: 24.067°</p>
+        <p>Temperature: 28.04°C</p>
+        <p>Height: 706m</p>
+        <p>Pressure: 973hPa</p>
+    </div>
+    <div class="graphs">
+        <div class="graph-container">
+            <div class="graph-title">Barometric Pressure</div>
+            <canvas id="liveGraphPressure"></canvas>
+        </div>
+        <div class="graph-container">
+            <div class="graph-title">Height</div>
+            <canvas id="liveGraphAltitude"></canvas>
+        </div>
+        <div class="graph-container">
+            <div class="graph-title">Temperature</div>
+            <canvas id="liveGraphTemp"></canvas>
+        </div>
+        <div class="graph-container">
+            <div class="graph-title">Velocity</div>
+            <canvas id="liveGraphVelocity"></canvas>
+        </div>
+        <div class="graph-container">
+            <div class="graph-title">Descent Path</div>
+            <div id="descentGraph"></div>
+        </div>
+    </div>
 
     <!-- Include Plotly.js -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
@@ -105,25 +154,41 @@
         // Update the graph every second
         setInterval(updateDescentGraph, 1000);
 
-        // Make the graph draggable
-        document.getElementById('descentGraph').addEventListener('mousedown', function(e) {
-            const descentGraph = document.getElementById('descentGraph');
-            let offsetX = e.clientX - descentGraph.getBoundingClientRect().left;
-            let offsetY = e.clientY - descentGraph.getBoundingClientRect().top;
+        // Generate and update live graphs
+        const tempCtx = document.getElementById('liveGraphTemp').getContext('2d');
+        const pressureCtx = document.getElementById('liveGraphPressure').getContext('2d');
+        const altitudeCtx = document.getElementById('liveGraphAltitude').getContext('2d');
+        const velocityCtx = document.getElementById('liveGraphVelocity').getContext('2d');
 
-            function onMouseMove(e) {
-                descentGraph.style.left = e.clientX - offsetX + 'px';
-                descentGraph.style.top = e.clientY - offsetY + 'px';
-            }
+        const tempData = { /* ... */ };
+        const pressureData = { /* ... */ };
+        const altitudeData = { /* ... */ };
+        const velocityData = { /* ... */ };
 
-            function onMouseUp() {
-                document.removeEventListener('mousemove', onMouseMove);
-                document.removeEventListener('mouseup', onMouseUp);
-            }
+        const tempConfig = { /* ... */ };
+        const pressureConfig = { /* ... */ };
+        const altitudeConfig = { /* ... */ };
+        const velocityConfig = { /* ... */ };
 
-            document.addEventListener('mousemove', onMouseMove);
-            document.addEventListener('mouseup', onMouseUp);
-        });
+        const tempChart = new Chart(tempCtx, tempConfig);
+        const pressureChart = new Chart(pressureCtx, pressureConfig);
+        const altitudeChart = new Chart(altitudeCtx, altitudeConfig);
+        const velocityChart = new Chart(velocityCtx, velocityConfig);
+
+        function generateRandomTempData(prevValue) { /* ... */ }
+        function generateRandomPressureData(prevValue) { /* ... */ }
+        function generateRandomAltitudeData(prevValue) { /* ... */ }
+        function generateRandomVelocityData(prevValue) { /* ... */ }
+
+        function updateTempGraph() { /* ... */ }
+        function updatePressureGraph() { /* ... */ }
+        function updateAltitudeGraph() { /* ... */ }
+        function updateVelocityGraph() { /* ... */ }
+
+        setInterval(updateTempGraph, 1000);
+        setInterval(updatePressureGraph, 1000);
+        setInterval(updateAltitudeGraph, 1000);
+        setInterval(updateVelocityGraph, 1000);
     </script>
 </body>
 </html>
