--- a/public/liveGraph/index.html
+++ b/public/liveGraph/index.html
@@ -8,7 +8,7 @@
         body {
             position: relative;
             height: 100vh;
-            background-color: #f0f0f0;
+            background-color: #bcb7b7;
             margin: 0;
             display: flex;
             flex-direction: column;
